# seki

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: rust.yml
src/: aggregate.rs  config.rs  main.rs  parse.rs
