[package]
name = "seki"
version = "0.1.2"
authors = ["stefafafan <github.le5ke@stenyan.jp>"]
license = "MIT"
description = "A CLI tool to help parse and aggregate access log data for further analysis."
readme = "README.md"
homepage = "https://github.com/stefafafan/seki"
repository = "https://github.com/stefafafan/seki"
keywords = ["cli", "log", "parser", "aggregator"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
